--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   /* color: rgba(153, 153, 8, 0.874); */
 }
 
-/*************************************************************************/
+/*************************yin-yang***************************************/
 
 .main-container {
   height: 200px;
@@ -65,3 +65,5 @@
     background-color: white;
   }
 }
+
+/*************************************************************************/
